R386 Backlog -> Spec: catalog.search semantic discovery plan
Expand the catalog.search slice (R118 slice 10) into a full Spec body
grounded in the landed R372 RAG seams, R362 CatalogFacts, and the
DevMojo classpath-refresh path. Resolves the five Spec-phase design
questions:

- Refresh via lazy self-observe (mirror ReverseEdgeIndex.Cache): a
  reference-identity fast path plus a descriptor-corpus-hash gate,
  re-embedding on R372's AsyncWarm daemon off the classpath-watcher
  thread, adding no new DevMojo trigger/listener.
- Invalidation keyed on a hash of the exact composed descriptor corpus
  passed to embedDocuments (not the jar bytes), so the hashed thing and
  the embedded thing cannot drift.
- Cross-model staleness trap closed in-slice via an embedder-identity
  manifest beside each persisted index (both candidate models are
  384-dim), rejecting on mismatch; no change to the frozen Embedder seam.
- Persisted FSDirectory under target/, reaped to current + one prior;
  cache dir enters through a RagConfig record on a widened constructor.
- Minimal tool surface (query + limit), name normalization (OQ3),
  comment-capture expectation (OQ4), multilingual flagged (OQ2).

Includes file-by-file implementation, four-tier test plan pinning the
three silent-staleness invariants, and a first-client user-doc draft.

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_014tJhRsha9Sqw47h7qb77Jr